增加了三个页面： 1.梦想规划 2、我的 3、二维码 和部分代码优化
Signed-off-by: hgl674420122 <674420122@qq.com>

--- a/pages/mx_naicha/mx_naicha.wxss
+++ b/pages/mx_naicha/mx_naicha.wxss
@@ -1,1 +1,2 @@
 /* pages/mx_naicha/mx_naicha.wxss */
+.box_huzhu{margin: 15px;background: white;border-radius: 5px;position: relative;text-align:center;color:white;background:#6dceaa}
