--- a/app.wxss
+++ b/app.wxss
@@ -1,5 +1,6 @@
 /**app.wxss**/
 @import "common/lib/weui.wxss";
+@import "common/lib/iconfont.wxss";
 @import "common/lib/widget/weui-button/weui-button.wxss";
 .container {
   height: 100%;
@@ -13,6 +14,7 @@
 .color_red{color: red;font-size: 25px}
 .color_white{color: white}
 .bloc{display: block;font-size: 15px}
+.bloc1{display: block;font-size: 14px}
 .page-head{margin: 15px;display: flex;flex-direction: column;border-radius: 10px;background: white;}
 .m_cheng{background:#f1f4f7;height:10px}
 .m_footer{background: white;border-top: thin solid #ebebeb}
@@ -23,7 +25,6 @@
 .menu{padding-top: 10px;margin: 5px}
 .memu_act{border-bottom: solid medium #04bbff}
 .menu_unact{border-bottom:solid medium #bfbfbf;}
-.box_huzhu{margin: 15px;background: white;border-radius: 5px;position: relative}
 .box_huzhu .box_chizi{width: 40%;background: #5ecd98;border-radius:5px;opacity: 0.8;text-align: center;color: white;padding: 5px 5px 5px 5px;font-size: 30rpx;position: absolute;top: -5px;left: 10px}
 /* 未中奖 */
 .no_reward{position: relative}
