--- a/app.wxss
+++ b/app.wxss
@@ -2,13 +2,15 @@
 @import "common/lib/weui.wxss";
 @import "common/lib/iconfont.wxss";
 @import "common/lib/widget/weui-button/weui-button.wxss";
+page{
+ background:#f1f4f7;
+}
 .container {
   height: 100%;
   display: block;
   width: 100%;
- background:#f1f4f7
+ background:#f1f4f7;
 } 
-
 
 .width_25{width: 25%}
 .width_30{width: 30%}
