--- a/pages/mx_jinxing/mx_jinxing.wxss
+++ b/pages/mx_jinxing/mx_jinxing.wxss
@@ -2,3 +2,9 @@
 /* .menu{padding-top: 10px}
 .memu_act{border-bottom: solid medium #04bbff;padding: 0 5px 0px 5px} */
 /* .wm_menxiang{width: 40%;background: #5ecd98;border-radius:5px;opacity: 0.8;text-align: center;color: white;padding: 5px 5px 5px 5px;font-size: 30rpx} */
+/* pages/mx_jinxing.wxss */
+/* .menu{padding-top: 10px}
+.memu_act{border-bottom: solid medium #04bbff;padding: 0 5px 0px 5px} 
+ .wm_menxiang{width: 40%;background: #5ecd98;border-radius:5px;opacity: 0.8;text-align: center;color: white;padding: 5px 5px 5px 5px;font-size: 30rpx} */
+ page{background:#f1f4f7}
+.box_huzhu{background: white;margin: 10px;border-radius: 10px}
