--- a/pages/mx_naicha/mx_naicha.wxml
+++ b/pages/mx_naicha/mx_naicha.wxml
@@ -25,21 +25,21 @@
   </view>
  </view>
  <!-- 底部导航栏 -->
- <view class="weui-footer_fixed-bottom m_footer row">
-    <view class='col'>
-      <view class='col-4 m_active'>
-      <image src='/image/canyuhuzhu.png' class='footer_logo'></image>
-      <text class='bloc'>参与互动</text> 
-    </view>
-    <view class='col-4'>
-      <image src='/image/canyuhuzhu.png' class='footer_logo'></image>
-      <text class='bloc'>小梦想</text> 
-    </view>
-    <view class='col-4'>
-      <image src='/image/canyuhuzhu.png' class='footer_logo'></image>
-      <text class='bloc' >我的</text> 
-    </view>
-    </view>
-  </view>
+  <view class="weui-footer_fixed-bottom m_footer row">
+       <view class='col'>
+        <view class='col-4 m_active'>
+        <navigator redirect="true" url="../index/index"><image src='/image/canyuhuzhu.png' class='footer_logo'></image>
+        <text class='bloc'>参与互动</text> </navigator>
+        </view>
+       <view class='col-4'>
+        <image src='/image/canyuhuzhu.png' class='footer_logo'></image>
+        <text class='bloc'>小梦想</text> 
+        </view>
+        <view class='col-4'>
+        <navigator redirect="true" url="../mx_wode/mx_wode"><image src='/image/canyuhuzhu.png' class='footer_logo'></image>
+        <text class='bloc' >我的</text> </navigator>
+        </view>
+       </view>
+      </view>
   <!-- 底部结束 -->
 </view>
