--- a/pages/mx_phone/mx_phone.wxml
+++ b/pages/mx_phone/mx_phone.wxml
@@ -4,15 +4,16 @@
  <view class='page-body'>
   <view class='box_huzhu'>
     <text class='bloc'>当前手机号</text>
-    <text class='bloc' style='text-align:center'>18000000000</text>
+    <text class='bloc' style='text-align:center'>{{tele}}</text>
     <text class='bloc'>修改为：</text>
-    <input type='number' placeholder="请输入您修改的手机号" maxlength="11" class='mx_number bloc' style='margin-top:20px'/>
+    <input type='number' placeholder="请输入您修改的手机号" maxlength="11" class='mx_number bloc' bindinput="teleInput" style='margin-top:20px' value="{{inputTele}}"/>
     <view class='yz_group row' style='width:70%;margin:10px auto'>
     <view class='col' style='margin-top:30px'>
-    <view class='col-7'><input class='bloc mx_yzput' type='number' placeholder="请输入验证码"  /></view>
-    <view class='col-5'> <button class='mx_yanzheng'>获取验证码</button></view>
+    <view class='col-7'><input class='bloc mx_yzput' type='number' bindinput="codeInput" placeholder="请输入验证码" value="{{inputCode}}" /></view>
+    <!-- <view class='col-1'></view> -->
+    <view class='col-5' style='margin-top:5px;'> <button class='mx_yanzheng' bindtap='generateCode'>获取验证码</button></view>
       </view>
-        <view class='flex-item' style='margin:30rpx 0px 30rpx 0px;'><button style='color:white;background:#5ecd98;border-radius:25px;margin-bottom:10px'>提交</button></view>
+        <view class='flex-item' style='margin:30rpx 0px 30rpx 0px;'><button style='color:white;background:#5ecd98;border-radius:25px;margin-bottom:10px' bindtap='submitCode'>提交</button></view>
     </view>
   
   </view>
