--- a/pages/mx_naicha/mx_naicha.wxml
+++ b/pages/mx_naicha/mx_naicha.wxml
@@ -4,24 +4,26 @@
 <view class=''>
  <view class='page-header'>
     <view class='menu col'>
-      <view class='col-4 memu_act'>
-        <text>我的小梦想</text>
+      <view id="mine"  bindtap="switchType" class='{{type.mine}}' >
+        <text >我的小梦想</text>
       </view>
-      <view class='col-4 menu_unact'>
+      <view id="bingo" bindtap="switchType" class='{{type.bingo}}'>
         <text>我中标的梦想池</text>
       </view>
-      <view class='col-4 menu_unact'>
+      <view id="plan" bindtap="switchType" class='{{type.plan}}'>
         <text>梦想规则</text>
       </view>
     </view>
   </view>
  <view class='page-body'>
-  <view class='box_huzhu' style='text-align:center;color:white;background:#6dceaa'>
-    <text class='bloc' style='padding-top:15px'>开个奶茶店</text>
-    <text class='bloc' style='padding:10px 0 5px 0'>从小我热爱美食，酷爱奶茶，一直有......</text>
+  <view bindtap="onEdit"  wx:for="{{dreams}}" wx:for-item="dream" wx:for-index="seek" id="{{dream.did}}"  class='box_huzhu' style='text-align:center;color:white;background:#6dceaa'>
+    <text class='bloc' style='padding-top:15px'>{{dream.title}}</text>
+    <text class='bloc' style='padding:10px 0 5px 0'>{{dream.content}}</text>
   </view>
-  <view class=''>
-    <image src='http://cloud.antit.top/add.png' style='height:50px;width:50px;display:block;margin:0 auto'></image>
+  <view>
+     <navigator navigate="true" url="../mx_xieyi/mx_xieyi">
+      <image src='http://cloud.antit.top/add.png' style='height:50px;width:50px;display:block;margin:0 auto'></image> 
+     </navigator>
   </view>
  </view>
  <!-- 底部导航栏 -->
