--- a/pages/mx_xieyi/mx_xieyi.wxml
+++ b/pages/mx_xieyi/mx_xieyi.wxml
@@ -5,37 +5,22 @@
  <view class='page-body'>
   <view class='box_huzhu' style='margin-bottom:100px'>
     <text class='bloc'>梦想标题(20字以内)</text>
-    <input type='text' placeholder="请输入您的梦想标题" maxlength="11" class='mx_number bloc' style='margin-top:20px'/>
+    <input type='text' bindinput='titleInput' placeholder="请输入您的梦想标题" maxlength="11" class='mx_number bloc' style='margin-top:20px'/>
     <text class='bloc mt_20'>梦想简介(140字以内)</text>
-    <textarea placeholder="请输入您的梦想" class='textarea_text' style=''></textarea>
+    <textarea bindinput='contentInput' placeholder="请输入您的梦想" class='textarea_text' style=''></textarea>
     <text class='bloc_15'>我承诺：</text>
     <text class='mx_xieyi'>我填写的梦想绝对真实我填写的梦想绝对真实我填写的梦想绝对真实我填写的梦想绝对真实我填写的梦想绝对真实我填写的梦想绝对真实我填写的梦想绝对真实我填写的梦想绝对真实我填写的梦想绝对真实我填写的梦想绝对真实</text>
      <view class='' style='text-align:center'>
-       <checkbox value="" checked="checked"/>
-    <text class='' style='font-size:13px'>阅读并同意《小梦想互助平台》和《用户协议》</text>
+     <checkbox-group bindchange="checkedEvent">
+       <checkbox  value="" checked=""/>
+       <text class='' style='font-size:13px'>阅读并同意《小梦想互助平台》和《用户协议》</text>
+      </checkbox-group>
+    
      </view>
     <view class='yz_group row' style='width:70%;margin:10px auto'>
-      <view class='flex-item' style='margin:30rpx 0px 30rpx 0px;'><button style='color:white;background:#5ecd98;border-radius:25px;margin-bottom:10px'>提交</button></view>
+      <view class='flex-item' style='margin:30rpx 0px 30rpx 0px;'><button style='color:white;background:#5ecd98;border-radius:25px;margin-bottom:10px' bindtap='submitDream'>提交</button></view>
       </view>
     </view>
  </view>
- <!-- 底部导航栏 -->
- <view class="weui-footer_fixed-bottom m_footer row">
-    <view class='col'>
-      <view class='col-4 m_active'>
-      <image src='/image/canyuhuzhu.png' class='footer_logo'></image>
-      <text class='bloc'>参与互动</text> 
-    </view>
-    <view class='col-4'>
-      <image src='/image/canyuhuzhu.png' class='footer_logo'></image>
-      <text class='bloc'>小梦想</text> 
-    </view>
-    <view class='col-4'>
-      <image src='/image/canyuhuzhu.png' class='footer_logo'></image>
-      <text class='bloc' >我的</text> 
-    </view>
-    </view>
-  </view>
-  <!-- 底部结束 -->
 </view>
 
